examples/test/testpolicy16634.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16634
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key5: value46
      key1: value5
      key8: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value26
          key4: value48
      podSelector:
        matchLabels:
          key1: value41
